{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 151,
  "lineage": "f107129b-53a2-2a9c-9cf9-7d78d53ec139",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "fortressmaximus-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0157af9aea2eef346",
            "arn": "arn:aws:ec2:us-east-1:114501972836:instance/i-08b98b0254e1cd097",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08b98b0254e1cd097",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-036ecc6d3f6b1137e"
              }
            ],
            "primary_network_interface_id": "eni-036ecc6d3f6b1137e",
            "private_dns": "ip-10-207-1-47.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.207.1.47",
            "public_dns": "ec2-44-203-43-36.compute-1.amazonaws.com",
            "public_ip": "44.203.43.36",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "ManagedBy": "Terraform"
                },
                "tags_all": {
                  "ManagedBy": "Terraform"
                },
                "throughput": 125,
                "volume_id": "vol-020bf3b987d857922",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01cb02cd13f54ab58",
            "tags": {
              "Name": "fortressmaximus-ec2"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "fortressmaximus-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06aaef6e303e3d974",
              "sg-0a8b586179535b1cb"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "i-08b98b0254e1cd097",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.fortressmaximus-sg",
            "aws_security_group.ping-sg",
            "aws_subnet.public-subnet-us-east-1a",
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ultramagnus-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-02b297871a94f4b42",
            "arn": "arn:aws:ec2:us-west-2:114501972836:instance/i-05f9296f9ce4a93e2",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05f9296f9ce4a93e2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08785347c72dd715b"
              }
            ],
            "primary_network_interface_id": "eni-08785347c72dd715b",
            "private_dns": "ip-10-205-2-80.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.205.2.80",
            "public_dns": "ec2-44-246-203-67.us-west-2.compute.amazonaws.com",
            "public_ip": "44.246.203.67",
            "region": "us-west-2",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b48f8c8f2fd1bcfb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d08f3c38c3fdf8cf",
            "tags": {
              "Name": "ultramagnus-ec2"
            },
            "tags_all": {
              "Name": "ultramagnus-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0be5f3e660e48310f"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "i-05f9296f9ce4a93e2",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.ultramagnus-sg",
            "aws_subnet.public-subnet-us-west-2a",
            "aws_vpc.ultramagnus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fortressmaximus-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114501972836:internet-gateway/igw-0c6f2acc5d29b855a",
            "id": "igw-0c6f2acc5d29b855a",
            "owner_id": "114501972836",
            "region": "us-east-1",
            "tags": {
              "Name": "fortressmaximus-igw",
              "Owner": "Optimus Prime",
              "Planet": "Cybertron",
              "Service": "application1"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "fortressmaximus-igw",
              "Owner": "Optimus Prime",
              "Planet": "Cybertron",
              "Service": "application1"
            },
            "vpc_id": "vpc-0883a1347ff336d80"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ultramagnus-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:114501972836:internet-gateway/igw-0d8eef40ce200c4bb",
            "id": "igw-0d8eef40ce200c4bb",
            "owner_id": "114501972836",
            "region": "us-west-2",
            "tags": {
              "Name": "ultramagnus-igw",
              "Owner": "Optimus Prime",
              "Planet": "Cybertron",
              "Service": "application1"
            },
            "tags_all": {
              "Name": "ultramagnus-igw",
              "Owner": "Optimus Prime",
              "Planet": "Cybertron",
              "Service": "application1"
            },
            "vpc_id": "vpc-0ec2855e77df0b403"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.ultramagnus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114501972836:route-table/rtb-01c5f17e0be33ba96",
            "id": "rtb-01c5f17e0be33ba96",
            "owner_id": "114501972836",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c6f2acc5d29b855a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fortressmaximus-public-rtb"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "fortressmaximus-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0883a1347ff336d80"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "rtb-01c5f17e0be33ba96",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.fortressmaximus-igw",
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-us-west-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:114501972836:route-table/rtb-09552be81f0c9c4e4",
            "id": "rtb-09552be81f0c9c4e4",
            "owner_id": "114501972836",
            "propagating_vgws": [],
            "region": "us-west-2",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d8eef40ce200c4bb",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ultramagnus-public-rtb"
            },
            "tags_all": {
              "Name": "ultramagnus-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec2855e77df0b403"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "rtb-09552be81f0c9c4e4",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_internet_gateway.ultramagnus-igw",
            "aws_vpc.ultramagnus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0114f20297fe5fdda",
            "region": "us-east-1",
            "route_table_id": "rtb-01c5f17e0be33ba96",
            "subnet_id": "subnet-01cb02cd13f54ab58"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.fortressmaximus-igw",
            "aws_route_table.public",
            "aws_subnet.public-subnet-us-east-1a",
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-subnet-us-west-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062c285f35f8e3734",
            "region": "us-west-2",
            "route_table_id": "rtb-09552be81f0c9c4e4",
            "subnet_id": "subnet-0d08f3c38c3fdf8cf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.ultramagnus-igw",
            "aws_route_table.public-us-west-2",
            "aws_subnet.public-subnet-us-west-2a",
            "aws_vpc.ultramagnus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fortressmaximus-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114501972836:security-group/sg-0a8b586179535b1cb",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a8b586179535b1cb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "fortressmaximus-sg",
            "name_prefix": "",
            "owner_id": "114501972836",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "fortressmaximus-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "fortressmaximus-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0883a1347ff336d80"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "sg-0a8b586179535b1cb",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ping-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114501972836:security-group/sg-06aaef6e303e3d974",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06aaef6e303e3d974",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "icmp-ping",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "ping-sg",
            "name_prefix": "",
            "owner_id": "114501972836",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ping-sg"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "ping-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0883a1347ff336d80"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "sg-06aaef6e303e3d974",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ultramagnus-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:114501972836:security-group/sg-0be5f3e660e48310f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0be5f3e660e48310f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ultramagnus-sg",
            "name_prefix": "",
            "owner_id": "114501972836",
            "region": "us-west-2",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ultramagnus-sg"
            },
            "tags_all": {
              "Name": "ultramagnus-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ec2855e77df0b403"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "sg-0be5f3e660e48310f",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.ultramagnus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-us-east-1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114501972836:subnet/subnet-01cb02cd13f54ab58",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.207.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01cb02cd13f54ab58",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "114501972836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-us-east-1a"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "public-subnet-us-east-1a"
            },
            "vpc_id": "vpc-0883a1347ff336d80"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "subnet-01cb02cd13f54ab58",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-us-west-2a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:114501972836:subnet/subnet-0d08f3c38c3fdf8cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.205.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d08f3c38c3fdf8cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "114501972836",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-west-2",
            "tags": {
              "Name": "public-subnet-us-west-2a"
            },
            "tags_all": {
              "Name": "public-subnet-us-west-2a"
            },
            "vpc_id": "vpc-0ec2855e77df0b403"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "subnet-0d08f3c38c3fdf8cf",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_vpc.ultramagnus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fortressmaximus-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114501972836:vpc/vpc-0883a1347ff336d80",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.207.0.0/16",
            "default_network_acl_id": "acl-04c3fc9ff5ebfc094",
            "default_route_table_id": "rtb-0b3f107fb522fd553",
            "default_security_group_id": "sg-03ab4bc559bf5ec1c",
            "dhcp_options_id": "dopt-0df9156ceceb1309c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0883a1347ff336d80",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b3f107fb522fd553",
            "owner_id": "114501972836",
            "region": "us-east-1",
            "tags": {
              "Name": "fortressmaximus-vpc",
              "Owner": "Optimus Prime",
              "Planet": "Cybertron",
              "Service": "vpc"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "fortressmaximus-vpc",
              "Owner": "Optimus Prime",
              "Planet": "Cybertron",
              "Service": "vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "vpc-0883a1347ff336d80",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ultramagnus-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:114501972836:vpc/vpc-0ec2855e77df0b403",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.205.0.0/16",
            "default_network_acl_id": "acl-09b6287cfc2d29fca",
            "default_route_table_id": "rtb-078ff722de57124e2",
            "default_security_group_id": "sg-06b2380275dd50b0e",
            "dhcp_options_id": "dopt-0e1d29cf1813bf7d4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ec2855e77df0b403",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-078ff722de57124e2",
            "owner_id": "114501972836",
            "region": "us-west-2",
            "tags": {
              "Name": "ultramagnus-vpc",
              "Owner": "Optimus Prime",
              "Planet": "Cybertron",
              "Service": "vpc"
            },
            "tags_all": {
              "Name": "ultramagnus-vpc",
              "Owner": "Optimus Prime",
              "Planet": "Cybertron",
              "Service": "vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "vpc-0ec2855e77df0b403",
            "region": "us-west-2"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "egress-for-ping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114501972836:security-group-rule/sgr-03e6e631781293775",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-03e6e631781293775",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-06aaef6e303e3d974",
            "security_group_rule_id": "sgr-03e6e631781293775",
            "tags": {
              "Name": "egress-for-ping"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "egress-for-ping"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "sgr-03e6e631781293775",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ping-sg",
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "fortressmaximus-sg-allow-all-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114501972836:security-group-rule/sgr-08670fc85180931df",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-08670fc85180931df",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0a8b586179535b1cb",
            "security_group_rule_id": "sgr-08670fc85180931df",
            "tags": null,
            "tags_all": {
              "ManagedBy": "Terraform"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "sgr-08670fc85180931df",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.fortressmaximus-sg",
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ultramagnus-sg-allow-all-traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:114501972836:security-group-rule/sgr-049bf3ba408bf8e95",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-049bf3ba408bf8e95",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-2",
            "security_group_id": "sg-0be5f3e660e48310f",
            "security_group_rule_id": "sgr-049bf3ba408bf8e95",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "sgr-049bf3ba408bf8e95",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.ultramagnus-sg",
            "aws_vpc.ultramagnus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "fortressmaximus-sg-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114501972836:security-group-rule/sgr-0f3a30ac243782569",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "icmp-ping",
            "from_port": -1,
            "id": "sgr-0f3a30ac243782569",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0a8b586179535b1cb",
            "security_group_rule_id": "sgr-0f3a30ac243782569",
            "tags": {
              "Name": "icmp-ping"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "icmp-ping"
            },
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "sgr-0f3a30ac243782569",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.fortressmaximus-sg",
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "fortressmaximus-sg-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114501972836:security-group-rule/sgr-06445e3de1c15eb59",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "SSH",
            "from_port": 22,
            "id": "sgr-06445e3de1c15eb59",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0a8b586179535b1cb",
            "security_group_rule_id": "sgr-06445e3de1c15eb59",
            "tags": {
              "Name": "SSH"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "SSH"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "sgr-06445e3de1c15eb59",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.fortressmaximus-sg",
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "icmp-ping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:114501972836:security-group-rule/sgr-07dafc6cca3d65187",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "icmp-ping",
            "from_port": null,
            "id": "sgr-07dafc6cca3d65187",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-06aaef6e303e3d974",
            "security_group_rule_id": "sgr-07dafc6cca3d65187",
            "tags": {
              "Name": "icmp-ping"
            },
            "tags_all": {
              "ManagedBy": "Terraform",
              "Name": "icmp-ping"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "sgr-07dafc6cca3d65187",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.ping-sg",
            "aws_vpc.fortressmaximus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ultramagnus-sg-ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:114501972836:security-group-rule/sgr-0ffa6d2cbc4af58ad",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "icmp-ping",
            "from_port": -1,
            "id": "sgr-0ffa6d2cbc4af58ad",
            "ip_protocol": "icmp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-2",
            "security_group_id": "sg-0be5f3e660e48310f",
            "security_group_rule_id": "sgr-0ffa6d2cbc4af58ad",
            "tags": {
              "Name": "icmp-ping"
            },
            "tags_all": {
              "Name": "icmp-ping"
            },
            "to_port": -1
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "sgr-0ffa6d2cbc4af58ad",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.ultramagnus-sg",
            "aws_vpc.ultramagnus-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ultramagnus-sg-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"].usw2",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:114501972836:security-group-rule/sgr-0537bf5806c8983c5",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "SSH",
            "from_port": 22,
            "id": "sgr-0537bf5806c8983c5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-west-2",
            "security_group_id": "sg-0be5f3e660e48310f",
            "security_group_rule_id": "sgr-0537bf5806c8983c5",
            "tags": {
              "Name": "SSH"
            },
            "tags_all": {
              "Name": "SSH"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "114501972836",
            "id": "sgr-0537bf5806c8983c5",
            "region": "us-west-2"
          },
          "dependencies": [
            "aws_security_group.ultramagnus-sg",
            "aws_vpc.ultramagnus-vpc"
          ]
        }
      ]
    }
  ]
}